--- a/portofolio-simple/stylesheets/layout.css
+++ b/portofolio-simple/stylesheets/layout.css
@@ -330,7 +330,7 @@ p {
 /* change Slider Styles at flexslider.css */
 
 .slider {
-	background-color: #334d66;
+	background-color: #2B4865;
 	padding-bottom: 10px;
 }
 
